Revert "Attempt 11 to fix scroll issue on mobile"
This reverts commit 04214f5879b3008a7275798dd217969fb29fcb78.

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,7 @@
 @import "tailwindcss";
 
-html {
-    background-color: #3b0764;
-    overscroll-behavior-y: none;
-}
-
 body {
     font-family: "Montserrat", sans-serif;
-    min-height: 100vh;
 }
 
 #root {
